# translate-comments-cpp

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  test.cpp
.github/workflows/: ci.yml  release.yml
src/: cache.rs  commands.rs  commands_test.rs  gpt.rs  gpt_test.rs  main.rs  parse.rs
tools/: apt.sh  choco.sh  goreleaser-dist.sh  goreleaser.go  null-ls-config.lua  nur.sh  update-readme.rs  yum.sh
