[package]
name = "translate-comments-cpp"
version = "0.6.3"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "=1.0.97"
async-std = { version = "=1.13.0", features = ["tokio1"] }
clap = "=3.2.17"
clap_complete = "=3.2.3"
dirs = "=6.0.0"
fstrings = "=0.2.3"
futures = { version = "=0.3.31", features = ["std"] }
languagetool-rust = { version = "=2.1.4", default-features = false, features = ["cli"] }
lazy_static = "=1.5.0"
owo-colors = "4.2.0"
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "=1.0.139"
tokio = { version = "=1.43.0", features = ["macros"] }
tree-sitter = "=0.25.2"
url = "=2.5.4"
xxhash-rust = { version = "=0.8.15", features = ["xxh3"] }

# Enable vendored features to simplify cross compilation.
reqwest = { version = "=0.12.12", default-features = false, features = ["native-tls-vendored", "json"] }

[dev-dependencies]
axum = "=0.8.1"
expectest = "=0.12.0"

[build-dependencies]
cc = { version = "=1.2.16", features = ["parallel"] }
vergen = { version = "=7.5.0", features = ["git"] }

[package.metadata.bin]
cargo-about = { version = "0.5.7" }
cargo-binstall = { version = "1.4.4" }
cargo-cmd = { version = "0.3.1" }
cargo-deny = { version = "0.13.5" }
cargo-gha = { version = "0.4.6" }
cargo-llvm-cov = { version = "0.5.25" }
cargo-nextest = { version = "0.9.57", locked = true }
git-cliff = { version = "1.3.1" }
rust-script = { version = "0.21.0" }

[package.metadata.gha]
targets = ["aarch64-apple-darwin"]

[package.metadata.gha.assets]
cli_cli = { tag = "v2.38.0", owner_repo = "cli/cli", binaries = ["gh"], target_archives = { aarch64-apple-darwin = "gh_{NOVTAG}_macOS_arm64.zip" } }
goreleaser_goreleaser = { tag = "v1.21.2", owner_repo = "goreleaser/goreleaser", binaries = ["goreleaser"], target_archives = { aarch64-apple-darwin = "goreleaser_Darwin_arm64.tar.gz" } }

[package.metadata.commands]
build-completions = '''set -e
  rm -rf completions
  mkdir completions
  ./target/debug/translate-comments-cpp completion --shell zsh > completions/translate-comments-cpp.zsh
  ./target/debug/translate-comments-cpp completion --shell bash > completions/translate-comments-cpp.bash
  ./target/debug/translate-comments-cpp completion --shell fish > completions/translate-comments-cpp.fish
'''
lint = '''set -e
  cargo cmd setup-nightly
  cargo +ltcc-nightly fmt --check
  cargo clippy
  cargo check
  cargo bin cargo-deny check licenses
'''
lint-fix = '''set -e
  cargo cmd setup-nightly
  cargo clippy --fix --allow-dirty --allow-staged
  cargo fix --allow-dirty --allow-staged
  # Run twice as for some reason not all formatting is applied on the first try.
  cargo +ltcc-nightly fmt
  cargo +ltcc-nightly fmt
'''
test = 'cargo nextest run'
test-coverage = '''
  cargo llvm-cov nextest --ignore-filename-regex='_test.rs'
'''
test-coverage-html = '''
  cargo llvm-cov nextest --open --ignore-filename-regex='_test.rs'
'''
test-coverage-lcov = '''
  rm -f lcov.info
  cargo llvm-cov nextest --lcov --output-path lcov.info --ignore-filename-regex='_test.rs'
'''
test-coverage-ci = '''
  cargo llvm-cov nextest --html --output-dir ./coverage --ignore-filename-regex='_test.rs'
'''
